add 2 new endpoints
