# internal/gen/http/openapi3.yaml
@@ -24,38 +24,38 @@ paths:
                                     $ref: '#/components/schemas/Subscription'
                                 description: A list of subscriptions
                                 example:
-                                    - email: user@email.com
+                                    - createdAt: "2012-04-23T18:25:43.511Z"
+                                      email: user@email.com
                                       name: John Doe
-                                      since: "2012-04-23T18:25:43.511Z"
                                       uid: abcd1234
-                                    - email: user@email.com
+                                    - createdAt: "2012-04-23T18:25:43.511Z"
+                                      email: user@email.com
                                       name: John Doe
-                                      since: "2012-04-23T18:25:43.511Z"
                                       uid: abcd1234
-                                    - email: user@email.com
+                                    - createdAt: "2012-04-23T18:25:43.511Z"
+                                      email: user@email.com
                                       name: John Doe
-                                      since: "2012-04-23T18:25:43.511Z"
                                       uid: abcd1234
-                                    - email: user@email.com
+                                    - createdAt: "2012-04-23T18:25:43.511Z"
+                                      email: user@email.com
                                       name: John Doe
-                                      since: "2012-04-23T18:25:43.511Z"
                                       uid: abcd1234
                             example:
-                                - email: user@email.com
+                                - createdAt: "2012-04-23T18:25:43.511Z"
+                                  email: user@email.com
                                   name: John Doe
-                                  since: "2012-04-23T18:25:43.511Z"
                                   uid: abcd1234
-                                - email: user@email.com
+                                - createdAt: "2012-04-23T18:25:43.511Z"
+                                  email: user@email.com
                                   name: John Doe
-                                  since: "2012-04-23T18:25:43.511Z"
                                   uid: abcd1234
-                                - email: user@email.com
+                                - createdAt: "2012-04-23T18:25:43.511Z"
+                                  email: user@email.com
                                   name: John Doe
-                                  since: "2012-04-23T18:25:43.511Z"
                                   uid: abcd1234
-                                - email: user@email.com
+                                - createdAt: "2012-04-23T18:25:43.511Z"
+                                  email: user@email.com
                                   name: John Doe
-                                  since: "2012-04-23T18:25:43.511Z"
                                   uid: abcd1234
                 "500":
                     description: 'ServerError: Error returned when there is an internal server error'
@@ -76,9 +76,9 @@ paths:
                         schema:
                             $ref: '#/components/schemas/CreateOneRequestBody'
                         example:
+                            createdAt: "2012-04-23T18:25:43.511Z"
                             email: user@email.com
                             name: John Doe
-                            since: "2012-04-23T18:25:43.511Z"
                             uid: abcd1234
             responses:
                 "200":
@@ -88,9 +88,9 @@ paths:
                             schema:
                                 $ref: '#/components/schemas/Subscription'
                             example:
+                                createdAt: "2012-04-23T18:25:43.511Z"
                                 email: user@email.com
                                 name: John Doe
-                                since: "2012-04-23T18:25:43.511Z"
                                 uid: abcd1234
                 "400":
                     description: 'SubscriptionFieldMissing: Error returned when the subscription has missing field(s)'
@@ -166,9 +166,9 @@ paths:
                             schema:
                                 $ref: '#/components/schemas/Subscription'
                             example:
+                                createdAt: "2012-04-23T18:25:43.511Z"
                                 email: user@email.com
                                 name: John Doe
-                                since: "2012-04-23T18:25:43.511Z"
                                 uid: abcd1234
                 "404":
                     description: 'SubscriptionNotFound: Error returned when the specified subscription does not exist'
@@ -187,6 +187,10 @@ components:
         CreateOneRequestBody:
             type: object
             properties:
+                createdAt:
+                    type: string
+                    description: Datetime when the subscription was made
+                    example: "2012-04-23T18:25:43.511Z"
                 email:
                     type: string
                     description: Subscribed email
@@ -195,19 +199,15 @@ components:
                     type: string
                     description: Name of the subscriber
                     example: John Doe
-                since:
-                    type: string
-                    description: Datetime when the subscription was made
-                    example: "2012-04-23T18:25:43.511Z"
                 uid:
                     type: string
                     description: Unique identifier of subcription
                     example: abcd1234
             description: Subscription to be created
             example:
+                createdAt: "2012-04-23T18:25:43.511Z"
                 email: user@email.com
                 name: John Doe
-                since: "2012-04-23T18:25:43.511Z"
                 uid: abcd1234
             required:
                 - email
@@ -256,6 +256,10 @@ components:
         Subscription:
             type: object
             properties:
+                createdAt:
+                    type: string
+                    description: Datetime when the subscription was made
+                    example: "2012-04-23T18:25:43.511Z"
                 email:
                     type: string
                     description: Subscribed email
@@ -264,19 +268,15 @@ components:
                     type: string
                     description: Name of the subscriber
                     example: John Doe
-                since:
-                    type: string
-                    description: Datetime when the subscription was made
-                    example: "2012-04-23T18:25:43.511Z"
                 uid:
                     type: string
                     description: Unique identifier of subcription
                     example: abcd1234
             description: Representation of the subscription
             example:
+                createdAt: "2012-04-23T18:25:43.511Z"
                 email: user@email.com
                 name: John Doe
-                since: "2012-04-23T18:25:43.511Z"
                 uid: abcd1234
 tags:
     - name: subscription
